style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
	background-color: rgb(245, 245, 245);
	font-size: 100%;
	line-height: 120%;
	--spacing: 2rem;
	scroll-behavior: smooth;
}

@media (width > 600px) {
	:root {
		font-size: 200%;
	}

	.topbutton {
		display: none;
	}
}

h1 {
	font-size: 2.2rem;
	line-height: 2.6rem;
	font-family: "arial-rounded-mt-pro", sans-serif;
	font-weight: 700;
	font-style: normal;
}

body {
	padding: calc(var(--spacing) /1.8);
	font-family: inter, sans-serif;
}

header p{
	font-family: "arial-rounded-mt-pro", sans-serif;
	font-weight: 700;
	font-size: 1.8rem;
	line-height: 2.3rem;
}

header {
	padding-block-start: calc(4 * var(--spacing));
	margin-block-end: var(--spacing);
}

blockquote {
	margin-inline: var(--spacing);
	margin-block: var(--spacing);
}

blockquote p {
	font-style: italic;
}

p {
	margin-block-end: var(--spacing);
}

.links {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	row-gap: calc(var(--spacing) / 2);
	padding-block: var(--spacing);
}

a {
	width: 48%;
	min-height: 4rem;
	border-radius: 0.7rem;
	font-family: "arial-rounded-mt-pro", sans-serif;
	font-weight: 700;
	font-size: 0.8rem;
	line-height: 1rem;
	padding-inline: calc(var(--spacing) / 3);
	color: white;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	border-style: solid;
	border-width: 0.1rem;
	border-color: rgb(0, 0, 0);
	background: #0d0d0d;
	background: linear-gradient(180deg,rgba(13, 13, 13, 1) 0%, rgba(219, 219, 219, 1) 5%, rgba(15, 15, 15, 1) 61%);
}

.topbutton {
	position: fixed;
	inset-inline-end: var(--spacing);
	inset-block-end: var(--spacing);
	width: 25%;
	min-height: 2rem;
}

